Fixed parallax images on mobile

--- a/src/App.scss
+++ b/src/App.scss
@@ -99,6 +99,7 @@ body {
 }
 
 .desktop-nav {
+  margin-bottom: 56px; 
   .active {
     border-bottom: 2px solid white;
     border-radius: 0;
@@ -108,6 +109,7 @@ body {
 }
 
 .mobile-nav {
+  margin-bottom: 56px;
   .MuiListItemText-root.active {
     border-bottom: 2px solid white;
     span {
@@ -118,11 +120,17 @@ body {
   }
 }
 
+.page {
+  padding: 40px;
+}
+
 .content {
+  //padding: 0 30px;
   text-align: center;
 }
 
 .navy-background {
+  padding: 0 30px;
   background: #000033;
   //background: pink;
   min-height: 100vh;
@@ -140,6 +148,7 @@ body {
 
   @media (max-width: 600px) {
     left: 10%;
+    background-image: url("../public/sunsetLayersMobile1.png");
   }
 }
 .image-2 {
@@ -152,6 +161,7 @@ body {
 
   @media (max-width: 600px) {
     left: 10%;
+    background-image: url("../public/sunsetLayersMobile2.png");
   }
 }
 .image-3 {
@@ -164,6 +174,7 @@ body {
 
   @media (max-width: 600px) {
     left: 10%;
+    background-image: url("../public/sunsetLayersMobile3.png");
   }
 }
 .image-4 {
@@ -176,6 +187,7 @@ body {
 
   @media (max-width: 600px) {
     left: 10%;
+    background-image: url("../public/sunsetLayersMobile4.png");
   }
 }
 
@@ -185,6 +197,11 @@ body {
   height: 100vh;
   align-items: center;
   gap: 15px;
+
+
+  @media (max-width: 600px) {
+    display: block;
+  }
 }
 
 .tenaya {
@@ -210,6 +227,7 @@ body {
   font-family: 'BeautyMountains';
 
   @media (max-width: 600px) {
+    top: 0;
     font-size: 2em;
 
     .piece {
@@ -227,6 +245,10 @@ body {
 
   .time {
     font-size: 0.75em;
+  }
+
+  @media (max-width: 600px) {
+    font-size: 3.5em;
   }
 }
 
@@ -247,6 +269,7 @@ body {
 
 .parallax {
   height: calc(100vh - 56px) !important;
+  //margin-top: 56px;
   // height: 100vh !important;
   -ms-overflow-style: none;  /* IE and Edge */
   scrollbar-width: none;  /* Firefox */
